--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,10 @@ dependencies:
   envied:
   #for date formatting
   intl:
+  responsive_framework: ^1.1.1
+  flutter_svg: ^2.0.9
+  google_fonts:
+  flex_color_scheme: ^7.3.1
 
   flutter_localizations:
     sdk: flutter
@@ -106,9 +110,8 @@ flutter:
   generate: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/app_icon.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
